--- a/app/_templates.twig
+++ b/app/_templates.twig
@@ -2,9 +2,53 @@
 
 {% block page %}
 <div class="container" data-module="Form">
-  <a href="javascript:void(0);" class="btn-burger" data-module="ToggleClass">
+  <a href="javascript:void(0);" class="btn-burger">
     <span>Menu</span>
   </a>
+  <ul>
+    <li><i class="flaticon-a-badminton9"></i><span>badminton9</span></li>
+    <li><i class="flaticon-a-bicycle14"></i><span>bicycle14</span></li>
+    <li><i class="flaticon-a-cable4"></i><span>cable4</span></li>
+    <li><i class="flaticon-a-connection30"></i><span>connection30</span></li>
+    <li><i class="flaticon-a-cooking35"></i><span>cooking35</span></li>
+    <li><i class="flaticon-a-cooking7"></i><span>cooking7</span></li>
+    <li><i class="flaticon-a-covered16"></i><span>covered16</span></li>
+    <li><i class="flaticon-a-credit56"></i><span>credit56</span></li>
+    <li><i class="flaticon-a-customerservice14"></i><span>customerservice14</span></li>
+    <li><i class="flaticon-a-dog50"></i><span>dog50</span></li>
+    <li><i class="flaticon-a-first22"></i><span>first22</span></li>
+    <li><i class="flaticon-a-flame11"></i><span>flame11</span></li>
+    <li><i class="flaticon-a-fun"></i><span>fun</span></li>
+    <li><i class="flaticon-a-heating1"></i><span>heating1</span></li>
+    <li><i class="flaticon-a-kitchen56"></i><span>kitchen56</span></li>
+    <li><i class="flaticon-a-kitchen6"></i><span>kitchen6</span></li>
+    <li><i class="flaticon-a-logotype117"></i><span>logotype117</span></li>
+    <li><i class="flaticon-a-man244"></i><span>man244</span></li>
+    <li><i class="flaticon-a-medical12"></i><span>medical12</span></li>
+    <li><i class="flaticon-a-money385"></i><span>money385</span></li>
+    <li><i class="flaticon-a-network11"></i><span>network11</span></li>
+    <li><i class="flaticon-a-parking19"></i><span>parking19</span></li>
+    <li><i class="flaticon-a-parking6"></i><span>parking6</span></li>
+    <li><i class="flaticon-a-phonecall10"></i><span>phonecall10</span></li>
+    <li><i class="flaticon-a-pipe9"></i><span>pipe9</span></li>
+    <li><i class="flaticon-a-plug38"></i><span>plug38</span></li>
+    <li><i class="flaticon-a-policeman1"></i><span>policeman1</span></li>
+    <li><i class="flaticon-a-pool8"></i><span>pool8</span></li>
+    <li><i class="flaticon-a-public6"></i><span>public6</span></li>
+    <li><i class="flaticon-a-public8"></i><span>public8</span></li>
+    <li><i class="flaticon-a-racket1"></i><span>racket1</span></li>
+    <li><i class="flaticon-a-screens6"></i><span>screens6</span></li>
+    <li><i class="flaticon-a-shopper1"></i><span>shopper1</span></li>
+    <li><i class="flaticon-a-shopping-cart8"></i><span>cart8</span></li>
+    <li><i class="flaticon-a-smoke2"></i><span>smoke2</span></li>
+    <li><i class="flaticon-a-swimming21"></i><span>swimming21</span></li>
+    <li><i class="flaticon-a-tea24"></i><span>tea24</span></li>
+    <li><i class="flaticon-a-temperature1"></i><span>temperature1</span></li>
+    <li><i class="flaticon-a-terrace"></i><span>terrace</span></li>
+    <li><i class="flaticon-a-tub1"></i><span>tub1</span></li>
+    <li><i class="flaticon-a-washingmachine3"></i><span>washingmachine3</span></li>
+    <li><i class="flaticon-a-yoga13"></i><span>yoga13</span></li>
+  </ul>
 
   <br>
   <br>
@@ -44,7 +88,7 @@
       <div class="thumb-item">
         <div class="thumb-gallery">
           <div id="thumb-control" class="thumb-slide carousel slide" data-ride="carousel">
-            <ul class="thumb-img carousel-inner">
+            <ul class="thumb-list carousel-inner">
               <li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
               <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
               <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
