--- a/app/index.twig
+++ b/app/index.twig
@@ -5,87 +5,110 @@
 
 	<div class="banner-wrapper text-center">
 		<h1>hello Saigon</h1>
-		<p>Popuplar Areas: 
-			<a href="#" class="link-under">district 1</a> 
-			<a href="#" class="link-under">district 2</a> 
-			<a href="#" class="link-under">district 3</a> 
-			<a href="#" class="link-under">district 7</a>
-			<a href="#" class="link-under">district 10</a>
-		</p>
+		<label>Popuplar Areas:</label>
+		<ul class="link-district">
+			<li><a href="#">district 1</a> </li>
+			<li><a href="#">district 2</a> </li>
+			<li><a href="#">district 3</a> </li>
+			<li><a href="#">district 7</a></li>
+			<li><a href="#">district 10</a></li>
+		</ul>
 
-		<div class="row">
-			<div class="col-md-8">
-				<div class="form-group search-map">
-					<input type="text" name="" placeholder="Searcb by Locality or Project Name" />
+		<form id="banner-search" data-module="searchGroup">
+			<div class="row">
+				<div class="col-md-8">
+					<div class="form-group search-map inputtags">
+						<div id="input-banner">
+							<input type="text" value="" data-role="tagsinput" placeholder="Searcb by Locality or Project Name" />
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="col-md-4 ">
-				<div class="select-wrapper">
-					<select name="type" id="type">
-						<option  disabled="disabled" selected="selected" value="">All Property Type</option>
-						<option value="Male">2000</option>
-						<option value="Female">2001</option>
-					</select>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-2">
-				<div class="select-wrapper select-bed">
-					<select name="bath" id="bath">
-						<option disabled="disabled" selected="selected" value="">Any bed</option>
-						<option value="Male">1</option>
-						<option value="Female">2</option>
-					</select>
+				<div class="col-md-4 ">
+					<div class="select-wrapper">
+						<select name="type" id="type">
+							<option  disabled="disabled" selected="selected" value="">All Property Type</option>
+							<option value="Male">2000</option>
+							<option value="Female">2001</option>
+						</select>
+					</div>
 				</div>
 			</div>
 
-			<div class="col-md-2">
-				<div class="select-wrapper select-bath">
-					<select name="bath" id="bath">
-						<option disabled="disabled" selected="selected" value="">Any bath</option>
-						<option value="Male">1</option>
-						<option value="Female">2</option>
-					</select>
+			<div class="row">
+				<div class="col-md-2">
+					<div class="select-wrapper select-bed">
+						<select name="bath" id="bath">
+							<option disabled="disabled" selected="selected" value="">Any bed</option>
+							<option value="Male">1</option>
+							<option value="Female">2</option>
+						</select>
+					</div>
 				</div>
-			</div>
-			<div class="col-md-2 ">
-				<div class="select-wrapper select-range">
-					<span class="range-text">Min</span>
-					<select name="min" id="min">
-						<option disabled="disabled" selected="selected" value="">0</option>
-						<option value="Male">$1000</option>
-						<option value="Female">$2000</option>
-					</select>
+
+				<div class="col-md-2">
+					<div class="select-wrapper select-bath">
+						<select name="bath" id="bath">
+							<option disabled="disabled" selected="selected" value="">Any bath</option>
+							<option value="Male">1</option>
+							<option value="Female">2</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-md-2 ">
+					<div class="select-wrapper select-range">
+						<span class="range-text">Min</span>
+						<select name="min" id="min">
+							<option disabled="disabled" selected="selected" value="">0</option>
+							<option value="Male">$1000</option>
+							<option value="Female">$2000</option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-md-2 ">
+					<div class="select-wrapper select-range">
+						<span class="range-text">Max</span>
+						<select name="max" id="max">
+							<option disabled="disabled" selected="selected" value="">0</option>
+							<option value="Male">$1000</option>
+							<option value="Female">$2000</option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-md-4 ">
+					<div class="select-wrapper">
+						<select name="bath" id="bath">
+							<option disabled="disabled" selected="selected" value="">Anybath</option>
+							<option value="Male">1</option>
+							<option value="Female">2</option>
+						</select>
+					</div>
 				</div>
 			</div>
 
-			<div class="col-md-2 ">
-				<div class="select-wrapper select-range">
-					<span class="range-text">Max</span>
-					<select name="max" id="max">
-						<option disabled="disabled" selected="selected" value="">0</option>
-						<option value="Male">$1000</option>
-						<option value="Female">$2000</option>
-					</select>
-				</div>
-			</div>
+			<div class="btn-wrapper">
+				<a href="search.html" class="btn btn--red">Search</a>
+			</div>	
+		</form>
 
-			<div class="col-md-4 ">
-				<div class="select-wrapper">
-					<select name="bath" id="bath">
-						<option disabled="disabled" selected="selected" value="">Anybath</option>
-						<option value="Male">1</option>
-						<option value="Female">2</option>
-					</select>
-				</div>
-			</div>
-		</div>
+		<script>
+		// var countries = new Bloodhound({
+		// 	datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+		// 	queryTokenizer: Bloodhound.tokenizers.whitespace,
+		// 	prefetch: {
+		// 		url: 'countries.json',
+		// 		filter: function(list) {
+		// 			return $.map(list, function(name) {
+		// 				return { name: name }; });
+		// 		}
+		// 	}
+		// });
+		// countries.initialize();
 
-		<div class="btn-wrapper">
-			<a href="#" class="btn btn--red">Search</a>
-		</div>
+		</script>
+
+		
 
 		<div class="site-sumary">
 			<p>Total Properties <br /><span>3125</span></p>
@@ -160,7 +183,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -182,7 +205,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -204,7 +227,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -226,7 +249,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -248,7 +271,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -270,7 +293,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -292,7 +315,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -314,7 +337,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -338,7 +361,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -360,7 +383,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -382,7 +405,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -404,7 +427,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -426,7 +449,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -448,7 +471,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -470,7 +493,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -493,7 +516,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
