--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -1,21 +1,28 @@
 <header data-module="Header">
-  <a class="logo" href="javascript:void(0);">
+  <a class="logo" href="\">
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
+  <form id="searchHeader" class="wrapper-inputtags collapse">
+    <div class="form-wrapper">
+      <input type="text" value="" id="search-header" data-role="tagsinput" />
+      <a class="close-form" href="#searchHeader" data-toggle="collapse"><i class="fa fa-close"></i></a>
+      <a href="#0" class="btn-submit"><i class="fa fa-search"></i></a>
+    </div>
+  </form>
   <nav>
     <a href="javascript:void(0);" class="btn-burger">
       <span>Menu</span>
     </a>
     <ul class="nav__menu clearfix">
       <li class="active">
-        <a href="javascript:void"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
+        <a href="#searchHeader" data-toggle="collapse" class="open-search collapsed"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
       </li>
       <li>
-        <a href="javascript:void(0);"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
+        <a href="listing.html"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
       </li>
       <li>
-        <a href="javascript:void(0);"><i class="fa fa-heart" aria-hidden="true"></i>Favorite</a>
+        <a href="project.html"><i class="fa fa-heart" aria-hidden="true"></i>Favorite</a>
       </li>
       <li>
         <a href="upload.html"><i class="fa fa-user-circle" aria-hidden="true"></i>login</a>
@@ -23,3 +30,4 @@
     </ul>
   </nav>
 </header>
+<div class="bg-popup"></div>
