--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -4,10 +4,26 @@
 	}
 }
 
+.map-detail {
+	position: relative;
+}
 .map-content {
 	min-height: 500px; 
 }
 
+.map-info {
+	@include absolute(top 30px left 60px);
+	width: 300px;
+	border:2px solid $blue;
+	z-index: 1;
+	background: #fff;
+	padding: 10px 20px;
+
+	h3 {
+    font-size: 22px;
+    text-transform: none;
+	}
+}
 .house-code {
 	padding: 10px 20px ;
 	position: relative;
@@ -72,6 +88,10 @@
 		content:'';
 		@extend .clearfix;
 	}
+}
+
+.tab-content {
+	margin: 30px 0;
 }
 
 .tab-link {
@@ -141,4 +161,52 @@
 
 .modal.and.carousel {
   position: fixed; // Needed because the carousel overrides the position property
+}
+
+.bar-request {
+	position: fixed;
+	top: -100px;
+	left: 0;
+	height: auto;
+	width: 100%;
+	background: #fff;
+	border-bottom: 1px solid #ddd;
+	padding: 10px 0;
+	z-index: 9;
+	transition:0.5s;
+
+	&.show {
+		top: 0;
+	}
+
+
+	h3 {
+		font-size: 18px;
+		margin: 12px 0;
+	}
+	span {
+		margin-left: 25px;
+		font-weight: normal;
+		text-transform: none;
+	}
+	.btn {
+		z-index: 11;
+		position: relative;
+	}
+}
+
+.gallery-house {
+	li {
+		overflow: hidden;
+		height: 75px;
+		text-align: center;
+		margin: 5px 0;
+		position: relative;
+	}
+	img {
+		@include absolute(top 50% left 50%);
+		transform: translate(-50%,-50%);
+		height: 100%;
+		width: auto;
+	}
 }
