--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -16,11 +16,20 @@
   width: 60%;
   float: right;
   min-height: 100vh;
+  display: none;
+  &.show {
+    display: inline-block;
+  }
 }
 
+.tab-content {
+  display: none;
+  &.active {
+    display: block;
+  }
+}
 
-
-.search__show {
+.search__list {
   font-size: 16px;
 
   > div {
@@ -43,11 +52,23 @@
   }
 }
 
+.open-map {
+  .map-result {
+    display: block;
+  }
+}
+
+
 .search__result {
   font-weight: bold;
 }
 
 .search__layout {
+  display: inline-block;
+
+  li {
+    display: inline-block;
+  }
   a {
     color: $color-light;
     margin-left: 10px; 
@@ -67,10 +88,15 @@
   padding: 30px;
 }
 
+.search-content--reduce {
+  display: inline-block;
+  width: 40%;
+}
+
 .search-detail {
   .thumb-item {
     width: 20%;
-    padding: 0 15px;
+    padding: 10px 15px;
   }
 
 }
@@ -79,6 +105,8 @@
 .search-content--small {
   float: left;
   max-width: 40%;
+  max-height: 100vh;
+  overflow-y: auto;
   .thumb-item {
     width: 50%;
   }
@@ -93,8 +121,23 @@
 }
 
 .filter-wrapper {
+  position: relative;
   .link {
     margin-left: 10px;
+  }
+
+  .close-modal {
+    top: 0;
+  }
+}
+
+.close-modal {
+  @include absolute(top -20px right 0px);
+  color: $gray-medium;
+  font-size: 32px;
+  z-index: 10;
+  &:hover {
+    color: #999;
   }
 }
 
@@ -140,7 +183,7 @@
 .popup-bubble-anchor {
   position: absolute;
   width: 100%;
-  bottom: 8px;
+  bottom: 0px;
   left: 0;
 }
 
@@ -154,7 +197,7 @@
   height: 0;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 8px solid #138f34;
+  border-top: 8px solid #fff;
 }
 
 
@@ -169,303 +212,303 @@
   transform: translate(-50%, -100%);
   overflow-y: hidden;
 
-    /* Style the info window. */
-    background-color: #138f34;
-    border-radius: 5px;
-    font-family: sans-serif;
-    overflow: hidden;
-    box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.5);
-    &:hover {
-      transform: translate(-50%, -100%) scale(1.05);
+  border-radius: 5px;
+  font-family: sans-serif;
+  overflow: hidden;
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.5);
+
+  background: #fff;
+  padding: 2px 10px;
+  text-align: left;
+  font-weight: bold;
+  font-size: 18px;
+  &:hover {
+    transform: translate(-50%, -100%) scale(1.05);
+  }
+  &.show {
+    z-index: 99;
+    transform: translate(-50%, -100%);
+  }
+  .popup__image {
+    width: 300px;
+    display: block;
+    opacity: 1;
+    margin-top: 10px;
+    transition: all .5s ease;
+  }
+  .popup-wrapper {
+    display: none;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+    .link {
+      display: inline-block;
     }
-    &.show {
-      z-index: 99;
-      transform: translate(-50%, -100%);
-      background-color: transparent;
-    }
-    .popup__image {
-      width: 50px;
+  }
+  .show-popup {
+    &.popup-wrapper {
+      cursor: context-menu;
       display: block;
       opacity: 1;
-      transition: all .5s ease;
-    }
-    .popup-wrapper {
-      display: none;
-      opacity: 0;
+      max-width: 300px;
       transition: all .5s ease-in-out;
-      .link {
-        display: inline-block;
-      }
-    }
-    .show-popup {
-      .popup__image {
-        opacity: 0;
-        display: none;
-      }
-      &.popup-wrapper {
-        cursor: context-menu;
-        display: block;
-        opacity: 1;
-        width: 200px;
-        transition: all .5s ease-in-out;
-        .popup__close {
-          cursor: pointer;
-          position: absolute;
-          top: 3px;
-          right: 3px;
-          width: 20px;
-          height: 20px;
-          display: block;
-          background: transparent;
-          &:after, &:before {
-            content: "";
-            display: block;
-            width: 90%;
-            height: 2px;
-            border-radius: 1px;
-            background-color: #fff;
-            top: 50%;
-            left: 0;
-            position: absolute;
-          }
-          &:before {
-            transform: translateY(-50%) rotate(-45deg);
-          }
-          &:after {
-            transform: translateY(-50%) rotate(45deg);
-          }
-        }
-        .popup__title {
-          padding: 10px;
-          color: #fff;
-          background-color: rgba(19, 143, 52, 0.9);
-        }
-        .popup__text {
-          padding: 10px;
-          background-color: #fff;
-        }
-      }
-    }
-  }
-
-
-  .calendar-outer {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(#000, 0.8);
-    display: none;
-    z-index: 99;
-    &.show {
-      display: block;
-    }
-    .calendar {
-      position: absolute;
-      padding: 20px;
-      padding-top: 40px;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      width: 500px;
-      background-color: #fff;
-      border-radius: 10px;
-      z-index: 100;
-      display: block;
-      @include screen(small, false) {
-        max-width: 90%;
-      }
-      .calendar-close {
+      .popup__close {
         cursor: pointer;
-        display: block;
         position: absolute;
-        top: 15px;
-        right: 15px;
-        width: 40px;
-        height: 40px;
+        top: 3px;
+        right: 3px;
+        width: 20px;
+        height: 20px;
+        display: block;
         background: transparent;
-        &:before,
-        &:after {
-          cursor: pointer;
-          content: '';
+        &:after, &:before {
+          content: "";
           display: block;
-          position: absolute;
-          width: 60%;
-          height: 5px;
-          background: #222;
+          width: 90%;
+          height: 2px;
+          border-radius: 1px;
+          background-color: #fff;
           top: 50%;
-          left: 50%;
-          border-radius: 3px;
+          left: 0;
+          position: absolute;
         }
         &:before {
-          transform: translate(-50%, -50%) rotate(45deg);
+          transform: translateY(-50%) rotate(-45deg);
         }
         &:after {
-          transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(45deg);
         }
       }
-      .calendar-btn {
-        position: relative;
-        text-align: center;
-        padding: 20px;
-        height: 70px;
-        .btn-transition {
-          cursor: pointer;
-          user-select: none;
-          position: absolute;
-          top: 50%;
-          font-size: 0;
-          display: block;
-          width: 30px;
-          height: 30px;
-          border-top: 10px solid #000;
-          border-right: 10px solid #000;
-          background-color: transparent;
-          &.prev {
-            left: 10px;
-            transform: translateY(-50%) rotate(-135deg);
-          }
-          &.next {
-            right: 10px;
-            transform: translateY(-50%) rotate(45deg);
-          }
-        }
+      .popup__title {
+        padding: 10px;
+        color: #fff;
+        background-color: rgba(19, 143, 52, 0.9);
       }
-      .calendar-table {
-        width: 100%;
-        border: 1px solid black;
-        text-align: center;
-        .date-of-week {
-          font-weight: bold;
-        }
-        .date {
-          cursor: pointer;
-          float: left;
-          width: percentage(1/7);
-          padding: 20px;
-          @include screen(small, false) {
-            padding: 5px;
-          }
-          &.cur-date {
-            background-color: #222;
-            color: white;
-          }
-          &.disable {
-            background-color: #eee;
-            pointer-events: none;
-            user-select: none;
-          }
-        }
-        .date-label:not(:last-child) {
-          border-right: 1px solid white;
-        }
-        .date-number {
-          transition: all .3s ease;
-          &.active {
-            background-color: #008cff;
-            color: #fff;
-          }
-          &.hide {
-            display: none;
-          }
-        }
+      .popup__text {
+        padding: 10px;
+        background-color: #fff;
       }
     }
   }
+}
 
-  .search-wrapper {
+
+.calendar-outer {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#000, 0.8);
+  display: none;
+  z-index: 99;
+  &.show {
+    display: block;
+  }
+  .calendar {
     position: absolute;
-    left: 150px;
-    top: 10px;
+    padding: 20px;
+    padding-top: 40px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 500px;
+    background-color: #fff;
+    border-radius: 10px;
+    z-index: 100;
+    display: block;
     @include screen(small, false) {
-      left: 50%;
-      top: 50px;
-      width: 90%;
-      transform: translateX(-50%);
+      max-width: 90%;
     }
-    .select-location {
-      padding: 5px 25px 5px 15px;
-      border-radius: 15px;
-      height: 30px;
-      outline: 0 none;
-      position: relative;
-      width: 100%;
-      background: #fff;
-      @include screen(small, false) {
-      }
-      .location-default {
-        border: none;
-      }
-    }
-    .btn-list-location {
-      position: absolute;
-      top: 0;
-      right: 0;
+    .calendar-close {
       cursor: pointer;
-      border-radius: 50%;
-      width: 31px;
-      height: 31px;
-      background: red;
-      opacity: 0;
-      visibility: hidden;
-      user-select: none;
-      transition: all .5s ease;
-      &.show {
-        user-select: auto;
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-    .badge-list-location {
-      cursor: pointer;
-      font-size: 8px;
       display: block;
       position: absolute;
-      top: 0;
-      right: 0;
-      padding: 2px 5px;
-      border-radius: 50%;
-      background: #fff;
-    }
-    .list-location-wrapper {
-      position: absolute;
-      user-select: none;
-      padding: 5px;
-      top: 120%;
-      left: 0;
-      width: 100%;
-      opacity: 0;
-      visibility: hidden;
-      transition: all .5s ease;
-      background: white;
-      table {
-        border-collapse: collapse;
-        width: 100%;
-        text-align: left;
-        tr:not(:first-child) {
-          border-bottom: 1px dashed #000;
-        }
-        th {
-          padding: 10px;
-          border-bottom: 1px solid #000;
-        }
-        td {
-          cursor: pointer;
-          padding: 10px;
-        }
-      }
-      .list-location-item {
+      top: 15px;
+      right: 15px;
+      width: 40px;
+      height: 40px;
+      background: transparent;
+      &:before,
+      &:after {
         cursor: pointer;
-        background: white;
-        width: 100%;
-        padding: 5px;
+        content: '';
+        display: block;
+        position: absolute;
+        width: 60%;
+        height: 5px;
+        background: #222;
+        top: 50%;
+        left: 50%;
+        border-radius: 3px;
       }
-      &.show {
-        opacity: 1;
-        visibility: visible;
-        user-select: auto;
+      &:before {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+      &:after {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+    }
+    .calendar-btn {
+      position: relative;
+      text-align: center;
+      padding: 20px;
+      height: 70px;
+      .btn-transition {
+        cursor: pointer;
+        user-select: none;
+        position: absolute;
+        top: 50%;
+        font-size: 0;
+        display: block;
+        width: 30px;
+        height: 30px;
+        border-top: 10px solid #000;
+        border-right: 10px solid #000;
+        background-color: transparent;
+        &.prev {
+          left: 10px;
+          transform: translateY(-50%) rotate(-135deg);
+        }
+        &.next {
+          right: 10px;
+          transform: translateY(-50%) rotate(45deg);
+        }
+      }
+    }
+    .calendar-table {
+      width: 100%;
+      border: 1px solid black;
+      text-align: center;
+      .date-of-week {
+        font-weight: bold;
+      }
+      .date {
+        cursor: pointer;
+        float: left;
+        width: percentage(1/7);
+        padding: 20px;
+        @include screen(small, false) {
+          padding: 5px;
+        }
+        &.cur-date {
+          background-color: #222;
+          color: white;
+        }
+        &.disable {
+          background-color: #eee;
+          pointer-events: none;
+          user-select: none;
+        }
+      }
+      .date-label:not(:last-child) {
+        border-right: 1px solid white;
+      }
+      .date-number {
+        transition: all .3s ease;
+        &.active {
+          background-color: #008cff;
+          color: #fff;
+        }
+        &.hide {
+          display: none;
+        }
       }
     }
   }
+}
+
+.search-wrapper {
+  position: absolute;
+  left: 150px;
+  top: 10px;
+  width: 500px;
+  @include screen(small, false) {
+    left: 50%;
+    top: 50px;
+    width: 90%;
+    transform: translateX(-50%);
+  }
+  .select-location {
+    padding: 5px 25px 5px 15px;
+    border-radius: 15px;
+    height: 30px;
+    outline: 0 none;
+    position: relative;
+    width: 100%;
+    background: #fff;
+    @include screen(small, false) {
+    }
+    .location-default {
+      border: none;
+    }
+  }
+  .btn-list-location {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    border-radius: 50%;
+    width: 31px;
+    height: 31px;
+    background: red;
+    opacity: 0;
+    visibility: hidden;
+    user-select: none;
+    transition: all .5s ease;
+    &.show {
+      user-select: auto;
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+  .badge-list-location {
+    cursor: pointer;
+    font-size: 8px;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 2px 5px;
+    border-radius: 50%;
+    background: #fff;
+  }
+  .list-location-wrapper {
+    position: absolute;
+    user-select: none;
+    padding: 5px;
+    top: 120%;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .5s ease;
+    background: white;
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      text-align: left;
+      tr:not(:first-child) {
+        border-bottom: 1px dashed #000;
+      }
+      th {
+        padding: 10px;
+        border-bottom: 1px solid #000;
+      }
+      td {
+        cursor: pointer;
+        padding: 10px;
+      }
+    }
+    .list-location-item {
+      cursor: pointer;
+      background: white;
+      width: 100%;
+      padding: 5px;
+    }
+    &.show {
+      opacity: 1;
+      visibility: visible;
+      user-select: auto;
+    }
+  }
+}
