--- a/app/assets/css/blocks/_footer.scss
+++ b/app/assets/css/blocks/_footer.scss
@@ -2,6 +2,7 @@ footer {
   border-top: 1px solid $color-light;
 	padding-top: 15px;
   box-shadow: 0 0 10px #ccc;
+  text-align: center;
 }
 .quick-link {
   padding: 0 0 40px;
