--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -29,6 +29,9 @@ header {
     max-width: 135px;
   }
 }
+.twitter-typeahead {
+  display: block !important;
+}
 .wrapper-inputtags {
   @include absolute(top 50% left 20%);
   border:1px solid #333;
@@ -190,7 +193,7 @@ nav {
       position: relative;
       margin-right: 10px;
       vertical-align: middle;
-      transition:0.5s ease-out;
+      transition:0.3s ease-out;
       opacity: 1;
       transform: scale(1);
     }
@@ -209,6 +212,7 @@ nav {
     li {
       transform: scale(0.9, 0.9);
       opacity: 0;
+      z-index: -1;
     }
   }
 
