--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -412,8 +412,7 @@ section {
 	font-size:1.5em;
 }
 .tt-menu { 
-	width:auto;
-	min-width: 200px;
+	width:100%;
 	background: #fff;
 	padding: 10px;
 	top: 120% !important;
