update sort list

--- a/app/search.twig
+++ b/app/search.twig
@@ -784,7 +784,7 @@
 
 				</div>
 			</div>
-			<div class=" tab-content active" id="search-mapview" >
+			<div class=" tab-content active" id="search-mapview" data-module="SortList">
 				<div class="row">
 					<!-- ios button: show/hide panel -->
 					<div class="jplist-ios-button">
