--- a/app/search.twig
+++ b/app/search.twig
@@ -786,11 +786,6 @@
 			</div>
 			<div class=" tab-content active" id="search-mapview" data-module="SortList">
 				<div class="row">
-					<!-- ios button: show/hide panel -->
-					<div class="jplist-ios-button">
-						<i class="fa fa-sort"></i>
-						jPList Actions
-					</div>
 					<div class="jplist-panel">
 
 						<div class="jplist-drop-down" data-control-type="sort-drop-down" data-control-name="sort" data-control-action="sort"> 
@@ -827,7 +822,7 @@
 				</div>
 				<div class="row list-box">
 
-					<div class="thumb-item list-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -851,7 +846,7 @@
 						</div>
 					</div>
 
-					<div class="thumb-item list-item col-md-6" data-date="04/03/2017" data-code="mh022" data-lng="106.66009490812" data-lat="10.74030300056" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="04/03/2017" data-code="mh022" data-lng="106.66009490812" data-lat="10.74030300056" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -874,7 +869,7 @@
 						</div>
 					</div>
 
-					<div class="thumb-item list-item col-md-6" data-date="05/03/2017" data-code="mh023" data-lng="106.68009490812" data-lat="10.74030300056" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="05/03/2017" data-code="mh023" data-lng="106.68009490812" data-lat="10.74030300056" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -897,7 +892,7 @@
 						</div>
 					</div>
 
-					<div class="thumb-item list-item col-md-6" data-date="06/03/2017" data-code="mh024" data-lng="106.60009490812" data-lat="10.70030300056" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="06/03/2017" data-code="mh024" data-lng="106.60009490812" data-lat="10.70030300056" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -920,7 +915,7 @@
 						</div>
 					</div>
 
-					<div class="thumb-item list-item col-md-6" data-date="07/03/2017" data-code="mh025" data-lng="106.62009490812" data-lat="10.780648587535" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="07/03/2017" data-code="mh025" data-lng="106.62009490812" data-lat="10.780648587535" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -943,7 +938,7 @@
 						</div>
 					</div>
 
-					<div class="thumb-item list-item col-md-6" data-date="08/03/2017" data-code="mh026" data-lng="106.67009490812" data-lat="10.790648587535" data-city="Ho Chi Minh">
+					<div class="thumb-item col-md-6" data-date="08/03/2017" data-code="mh026" data-lng="106.67009490812" data-lat="10.790648587535" data-city="Ho Chi Minh">
 						<div class="thumb-gallery " data-module="ThumbSlide">
 							<ul class="thumb-list slider-wrapper">
 								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
