--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -23,12 +23,8 @@
   <link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
   <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
   <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/bower_components/jplist/dist/css/jplist.core.min.css" />
-  {# <link href="/bower_components/jplist/jplist.textbox-filter.min.css" rel="stylesheet" />
-  <link href="/bower_components/jplist/jplist.pagination-bundle.min.css" rel="stylesheet" />
-  <link href="/bower_components/jplist/jplist.history-bundle.min.css" rel="stylesheet" />
-  <link href="/bower_components/jplist/jplist.filter-toggle-bundle.min.css" rel="stylesheet" / >#}
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -71,8 +67,8 @@
 <!-- build:js {{assetPath}}/js/vendor.js -->
 <!-- bower:js -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
 <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
+<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
 <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
 <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
@@ -81,11 +77,8 @@
 <script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
 <script src="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
 <script src="/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/bower_components/jplist/dist/js/jplist.core.min.js"></script>
-<script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
-<script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
-<script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -93,23 +86,23 @@
 <script src="{{assetPath}}/js/app.js"></script>
 
   <script>
-        // $('document').ready(function(){
-        //     // $('#demo').jplist({
-        //     //     itemsBox: '.list'
-        //     //     ,itemPath: '.list-item'
-        //     //     ,panelPath: '.jplist-panel'
-        //     //     ,storage: 'localstorage'
-        //     //     ,storageName: 'mixed-controls-local-storage'
-        //     // }); 
-        //       $('#search-mapview').jplist({
-        //         itemsBox: '.list-box'
-        //         ,itemPath: '.thumb-item'
-        //         ,panelPath: '.jplist-panel'
-        //         ,storage: 'localstorage'
-        //         ,storageName: 'mixed-controls-local-storage'
-        //         ,effect: 'fade'
-        //     });
-        // });
+        $('document').ready(function(){
+            // $('#demo').jplist({
+            //     itemsBox: '.list'
+            //     ,itemPath: '.list-item'
+            //     ,panelPath: '.jplist-panel'
+            //     ,storage: 'localstorage'
+            //     ,storageName: 'mixed-controls-local-storage'
+            // }); 
+              $('#search-mapview').jplist({
+                itemsBox: '.list-box'
+                ,itemPath: '.thumb-item'
+                ,panelPath: '.jplist-panel'
+                ,storage: 'localstorage'
+                ,storageName: 'mixed-controls-local-storage'
+                ,effect: 'fade'
+            });
+        });
     </script>
 
 
